# web-ai-assistant-mvp

./: .gitignore  LICENSE  PLAN.md  README.md  build_notebook.py  pyproject.toml  requirements-analytics.txt  requirements-dev.txt  requirements-eval.txt  requirements-gigachat.txt  requirements-llm.txt  requirements-ocr.txt  requirements-pdf.txt  requirements-reranker.txt  requirements-server.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
data/eval/: README.md  questions.jsonl  questions_v1.jsonl  questions_v2.jsonl  schema.json
notebooks/: build_serve_notebook.py  serve_colab.ipynb  web_ai_assistant_mvp.ipynb
src/web_ai_assistant/: __init__.py  corpus.py  guards.py  index.py  llm.py  privacy.py  rag.py  server.py
src/web_ai_assistant/analytics/: __init__.py  clustering.py  storage.py  threshold.py
src/web_ai_assistant/cli/: __init__.py  cache.py  eval_validate.py  threshold.py
src/web_ai_assistant/embeddings/: __init__.py  cache.py  e5.py  gigachat.py
src/web_ai_assistant/eval/: __init__.py  ab.py  dataset.py  factories.py  metrics.py  report.py  stats.py
src/web_ai_assistant/llms/: __init__.py  gigachat.py  qwen.py
src/web_ai_assistant/loaders/: __init__.py  pdf.py
src/web_ai_assistant/rerankers/: __init__.py  bge.py  gigachat.py
src/web_ai_assistant/retrieval/: __init__.py  mmr.py
static/: README.demo.md  app.js  index.html
tests/: conftest.py  test_ab_eval.py  test_adaptive_threshold.py  test_analytics_clustering.py  test_analytics_storage.py  test_corpus.py  test_embedding_cache.py  test_eval_dataset.py  test_gigachat.py  test_gigachat_embeddings.py  test_guards.py  test_index.py  test_mmr.py  test_pdf_loader.py  test_privacy.py  test_rag.py  test_rag_stream.py  test_reranker.py  test_server.py  test_server_admin.py
