[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-ai-assistant"
version = "0.1.0"
description = "MVP-воспроизведение ИИ-ассистента для дисциплин web-разработки (ИСТ ДГТУ): RAG + faithfulness eval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "IST DGTU team (Трубчик · Ревякина · Гнедина)" },
]
maintainers = [
    { name = "IrinaZeroDev" },
]
keywords = ["rag", "llm", "education", "faithfulness", "ragas", "qwen", "ist-dgtu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.3",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.46",
    "accelerate>=1.1",
    "bitsandbytes>=0.44; platform_system != 'Darwin'",
    "torch>=2.3",
]
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
    "pandas>=2.0",
    "langchain-huggingface>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "nbformat>=5.10",
]

[project.urls]
Homepage = "https://github.com/IrinaZeroDev/web-ai-assistant-mvp"
Repository = "https://github.com/IrinaZeroDev/web-ai-assistant-mvp"
Issues = "https://github.com/IrinaZeroDev/web-ai-assistant-mvp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web_ai_assistant = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # длина строки управляется форматтером

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
